Fix missing space on run info page
Closes #324

--- a/client/src/app/pages/dashboard/runs/run-info/run-info.component.scss
+++ b/client/src/app/pages/dashboard/runs/run-info/run-info.component.scss
@@ -20,7 +20,7 @@ hr {
 }
 
 .user {
-  padding-right: 1%;
+  margin-right: 1%;
 }
 
 nb-user {
